[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/instrument_designer/fm/lfo_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/instrument_designer/fm/routing.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/widgets/bar_editor.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/instrument_designer/fm/fm_editor.gd" type="Script" id=4]
[ext_resource path="res://ui/instrument_designer/fm/op_panel.tscn" type="PackedScene" id=5]

[node name="FmEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Info" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="HBC" type="HBoxContainer" parent="Info"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="LabelName" type="Label" parent="Info/HBC" groups=["Label"]]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Name"

[node name="Name" type="LineEdit" parent="Info/HBC"]
margin_left = 42.0
margin_right = 234.0
margin_bottom = 24.0
rect_min_size = Vector2( 192, 0 )

[node name="Tabs" type="TabContainer" parent="."]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
tab_align = 0

[node name="LFOs" type="Tabs" parent="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="LFOs" type="GridContainer" parent="Tabs/LFOs"]
anchor_right = 1.0
margin_bottom = 144.0
size_flags_horizontal = 3
columns = 2

[node name="LFO1" parent="Tabs/LFOs/LFOs" instance=ExtResource( 1 )]
margin_right = 506.0
margin_bottom = 70.0

[node name="LFO2" parent="Tabs/LFOs/LFOs" instance=ExtResource( 1 )]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 70.0
lfo = 1

[node name="LFO3" parent="Tabs/LFOs/LFOs" instance=ExtResource( 1 )]
margin_top = 74.0
margin_right = 506.0
margin_bottom = 144.0
lfo = 2

[node name="LFO4" parent="Tabs/LFOs/LFOs" instance=ExtResource( 1 )]
margin_left = 510.0
margin_top = 74.0
margin_right = 1016.0
margin_bottom = 144.0
lfo = 3

[node name="Parameters" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Params" type="ScrollContainer" parent="Tabs/Parameters"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -24.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBC" type="VBoxContainer" parent="Tabs/Parameters/Params"]
margin_right = 1008.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="OPS" type="GridContainer" parent="Tabs/Parameters/Params/VBC"]
margin_right = 996.0
margin_bottom = 784.0
size_flags_horizontal = 3
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 2

[node name="OP1" parent="Tabs/Parameters/Params/VBC/OPS" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_right = 490.0
margin_bottom = 384.0

[node name="OP2" parent="Tabs/Parameters/Params/VBC/OPS" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_left = 506.0
margin_right = 996.0
margin_bottom = 384.0
operator = 1

[node name="OP3" parent="Tabs/Parameters/Params/VBC/OPS" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 400.0
margin_right = 490.0
margin_bottom = 784.0
operator = 2

[node name="OP4" parent="Tabs/Parameters/Params/VBC/OPS" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_left = 506.0
margin_top = 400.0
margin_right = 996.0
margin_bottom = 784.0
operator = 3

[node name="Routing" parent="Tabs/Parameters/Params/VBC" instance=ExtResource( 2 )]
margin_top = 788.0
margin_right = 996.0
margin_bottom = 960.0

[node name="Macros" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Macro" type="ScrollContainer" parent="Tabs/Macros"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Macro" type="VBoxContainer" parent="Tabs/Macros/Macro"]
margin_right = 1016.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 256 )
size_flags_horizontal = 3

[node name="Tone" parent="Tabs/Macros/Macro/Macro" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 1016.0
title = "Tone (cents)"
min_value_rel = -4800.0
max_value_rel = 4800.0
min_value_abs = -200.0
max_value_abs = 14300.0
big_step = 10.0
huge_step = 100.0
mode = 3

[node name="Macros OP1" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Macros OP2" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Macros OP3" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Macros OP4" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[connection signal="text_changed" from="Info/HBC/Name" to="." method="_on_Name_changed"]
[connection signal="instrument_changed" from="Tabs/Parameters/Params/VBC/OPS/OP1" to="." method="_on_instrument_changed"]
[connection signal="operator_changed" from="Tabs/Parameters/Params/VBC/OPS/OP1" to="." method="_on_operator_changed"]
[connection signal="instrument_changed" from="Tabs/Parameters/Params/VBC/OPS/OP2" to="." method="_on_instrument_changed"]
[connection signal="operator_changed" from="Tabs/Parameters/Params/VBC/OPS/OP2" to="." method="_on_operator_changed"]
[connection signal="instrument_changed" from="Tabs/Parameters/Params/VBC/OPS/OP3" to="." method="_on_instrument_changed"]
[connection signal="operator_changed" from="Tabs/Parameters/Params/VBC/OPS/OP3" to="." method="_on_operator_changed"]
[connection signal="instrument_changed" from="Tabs/Parameters/Params/VBC/OPS/OP4" to="." method="_on_instrument_changed"]
[connection signal="operator_changed" from="Tabs/Parameters/Params/VBC/OPS/OP4" to="." method="_on_operator_changed"]
[connection signal="instrument_changed" from="Tabs/Parameters/Params/VBC/Routing" to="." method="_on_instrument_changed"]
